--- a/qiyexiaohao/addContact.html
+++ b/qiyexiaohao/addContact.html
@@ -8,6 +8,7 @@
 		<link href="css/mui.min.css" rel="stylesheet" />
 		<link rel="stylesheet" href="css/mint-ui-style.css" />
 		<link rel="stylesheet" href="css/common.css" />
+		<link rel="stylesheet" href="css/iconfont.css" />
 		<style>
 			.mg5 {
 				margin: 5px 0;
@@ -34,7 +35,7 @@
 	<body>
 		<div id="app">
 			<header class="mui-bar mui-bar-nav">
-				<a class="mui-action-back mui-icon mui-icon-left-nav mui-pull-left"></a>
+				<a class="mui-action-back mui-icon iconfont icon-jiantou mui-pull-left"></a>
 				<h1 class="mui-title">新增联系人</h1>
 				<button @tap="addContact()" class="mui-btn-link mui-pull-right">保存</button>
 			</header>
