--- a/qiyexiaohao/center/addAcount.html
+++ b/qiyexiaohao/center/addAcount.html
@@ -7,6 +7,7 @@
 		<meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no" />
 		<link href="../css/mui.min.css" rel="stylesheet" />
 		<link rel="stylesheet" href="../css/common.css" />
+		<link rel="stylesheet" href="../css/iconfont.css" />
 		<style>
 			.mui-content {
 				background-color: #fff;
@@ -19,7 +20,7 @@
 
 	<body>
 		<header class="mui-bar mui-bar-nav">
-			<a class="mui-action-back mui-icon mui-icon-left-nav mui-pull-left"></a>
+			<a class="mui-action-back mui-icon iconfont icon-jiantou mui-pull-left"></a>
 			<h1 class="mui-title">添加账号</h1>
 		</header>
 		<div class="mui-content mui-fullscreen mui-scroll-wrapper" id="app">
