--- a/qiyexiaohao/center/feedback.html
+++ b/qiyexiaohao/center/feedback.html
@@ -7,12 +7,13 @@
 		<title>问题反馈</title>
 		<link rel="stylesheet" type="text/css" href="../css/mui.min.css" />
 		<link rel="stylesheet" href="../css/common.css" />
+		<link rel="stylesheet" href="../css/iconfont.css" />
 	</head>
 
 	<body>
 		<header class="mui-bar mui-bar-nav">
-			<a class="mui-action-back mui-icon mui-icon-left-nav mui-pull-left"></a>
-			<button id="submit" class="mui-btn mui-btn-blue mui-btn-link mui-pull-right">发送</button>
+			<a class="mui-action-back mui-icon iconfont icon-jiantou mui-pull-left"></a>
+			<button id="submit" class="mui-btn mui-btn-link mui-pull-right">发送</button>
 			<h1 class="mui-title">意见反馈</h1>
 		</header>
 		<div class="mui-content">
@@ -21,4 +22,11 @@
 			</div>
 		</div>
 	</body>
+	<script src="../js/mui.min.js"></script>
+	<script type="text/javascript" src="../js/common.js"></script>
+	<script type="text/javascript">
+		(function(_, w, u) {
+			
+		})(mui, window, util)
+	</script>
 </html>
