--- a/qiyexiaohao/center/setting.html
+++ b/qiyexiaohao/center/setting.html
@@ -8,6 +8,7 @@
 		<link href="../css/mui.min.css" rel="stylesheet" />
 		<link rel="stylesheet" href="../css/mint-ui-style.css" />
 		<link rel="stylesheet" href="../css/common.css" />
+		<link rel="stylesheet" href="../css/iconfont.css" />
 		<style>
 			.mg5 {
 				margin: 0 0 15px 0;
@@ -69,7 +70,7 @@
 	<body>
 		<div id="app">
 			<header class="mui-bar mui-bar-nav">
-				<a class="mui-action-back mui-icon mui-icon-left-nav mui-pull-left"></a>
+				<a class="mui-action-back mui-icon iconfont icon-jiantou mui-pull-left"></a>
 				<h1 class="mui-title">设置</h1>
 			</header>
 			<div class="mui-content mui-fullscreen mui-scroll-wrapper">
