--- a/qiyexiaohao/contact_mint.html
+++ b/qiyexiaohao/contact_mint.html
@@ -9,13 +9,19 @@
 		<link rel="stylesheet" href="css/mint-ui-style.css" />
 		<link rel="stylesheet" href="css/common.css" />
 		<link rel="stylesheet" href="js/component/indexList-style.css" />
+		<link rel="stylesheet" href="css/iconfont.css" />
+		<style>
+			.mui-bar-nav.mui-bar .mui-icon{
+				margin-top: 0;
+			}
+		</style>
 	</head>
 
 	<body>
 		<div id="app">
 			<header class="mui-bar mui-bar-nav">
 				<h1 class="mui-title">联系人</h1>
-				<a class="mui-icon mui-icon-plusempty mui-pull-right" @tap="toAddContact"></a>
+				<button class="mui-btn-link mui-icon mui-icon-plusempty mui-pull-right" @tap="toAddContact"></button>
 			</header>
 			<div class="mui-content">
 				<form class="mui-input-group" @submit.prevent="search">
