--- a/qiyexiaohao/index.html
+++ b/qiyexiaohao/index.html
@@ -8,24 +8,25 @@
 		<meta name="apple-mobile-web-app-capable" content="yes">
 		<meta name="apple-mobile-web-app-status-bar-style" content="black">
 		<link rel="stylesheet" href="css/mui.min.css">
+		<link rel="stylesheet" href="css/iconfont.css" />
 	</head>
 
 	<body>
 		<nav class="mui-bar mui-bar-tab">
 			<a id="defaultTab" class="mui-tab-item mui-active" href="main.html">
-				<span class="mui-icon mui-icon-home"></span>
+				<span class="mui-icon iconfont icon-tongxunlu"></span>
 				<span class="mui-tab-label">通话</span>
 			</a>
-			<a class="mui-tab-item" href="msg1.html">
-				<span class="mui-icon mui-icon-email"></span>
-				<span class="mui-tab-label">信息</span>
+			<a class="mui-tab-item" href="msg.html">
+				<span class="mui-icon iconfont icon-dingdan-duanxin"></span>
+				<span class="mui-tab-label">短信</span>
 			</a>
 			<a class="mui-tab-item" href="contact_mint.html">
-				<span class="mui-icon mui-icon-contact"></span>
+				<i class="mui-icon iconfont icon-lianxiren1"></i>
 				<span class="mui-tab-label">联系人</span>
 			</a>
 			<a class="mui-tab-item" href="my.html">
-				<span class="mui-icon mui-icon-gear"></span>
+				<span class="mui-icon iconfont icon-shouji"></span>
 				<span class="mui-tab-label">我的</span>
 			</a>
 		</nav>
@@ -38,7 +39,7 @@
 					"id":"contactDetail"
 				}]
 			});
-			var subpages = ['main.html', 'msg1.html', 'contact_mint.html', 'my.html'];
+			var subpages = ['main.html', 'msg.html', 'contact_mint.html', 'my.html'];
 			var subpage_style = {
 				top: '0',
 				bottom: '51px'
