--- a/qiyexiaohao/msg.html
+++ b/qiyexiaohao/msg.html
@@ -3,13 +3,315 @@
 
 	<head>
 		<meta charset="UTF-8">
-		<title>发送短信</title>
+		<title>全部信息</title>
 		<meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no" />
 		<link href="css/mui.min.css" rel="stylesheet" />
+		<link rel="stylesheet" href="css/mint-ui-style.css" />
+		<link rel="stylesheet" href="css/common.css" />
+		<link rel="stylesheet" href="css/iconfont.css" />
+		<style>
+			.i_flag {
+				background: #2AC845;
+				color: #fff;
+				font-size: 12px;
+				padding: 5px;
+				margin: 10px 10px 0 0;
+			}
+			
+			.mui-input-group .mui-input-row {
+				line-height: 38px;
+			}
+		</style>
 	</head>
+
 	<body>
+		<div id="app">
+			<header class="mui-bar mui-bar-nav">
+				<button @tap="toggleTopP()" class="mui-btn-link mui-icon iconfont icon-dianjihoudesanheng mui-pull-left" style="margin-top: 0;"></button>
+				<h1 class="mui-title">全部信息</h1>
+				<a @tap="toAdd()" class="mui-icon mui-icon-plusempty mui-pull-right"></a>
+			</header>
+			<div class="mui-content mui-scroll-wrapper mui-fullscreen">
+				<div class="mui-scroll">
+					<form class="mui-input-group" @submit.prevent="search">
+						<mt-search v-model="searchValue" cancel-text="取消" placeholder="搜索"></mt-search>
+					</form>
+					<ul class="mui-table-view mui-table-view-striped mui-table-view-condensed">
+						<li class="mui-table-view-cell">
+							<div class="mui-slider-right mui-disabled">
+								<a class="mui-btn mui-btn-red">删除</a>
+							</div>
+							<div class="mui-slider-handle">
+								<div class="mui-table">
+									<div class="mui-table-cell mui-col-xs-9">
+										<h4 class="mui-ellipsis">王琦<span class="i_flag">主号</span></h4>
+										<p class="mui-h6 mui-ellipsis">晒偶发还沙发煎熬束带结发欧帕斯晒偶发还沙发煎熬束带结发欧帕斯</p>
+									</div>
+									<div class="mui-table-cell mui-col-xs-3 mui-text-right">
+										<div class="mui-h5">下午14:25</div>
+										<div class="mui-badge mui-badge-danger">15</div>
+									</div>
+								</div>
+							</div>
+						</li>
+						<li class="mui-table-view-cell">
+							<div class="mui-slider-right mui-disabled">
+								<a class="mui-btn mui-btn-red">删除</a>
+							</div>
+							<div class="mui-slider-handle">
+								<div class="mui-table">
+									<div class="mui-table-cell mui-col-xs-9">
+										<h4 class="mui-ellipsis">王琦<span class="i_flag">主号</span></h4>
+										<p class="mui-h6 mui-ellipsis">晒偶发还沙发煎熬束带结发欧帕斯晒偶发还沙发煎熬束带结发欧帕斯</p>
+									</div>
+									<div class="mui-table-cell mui-col-xs-3 mui-text-right">
+										<div class="mui-h5">下午14:25</div>
+										<div class="mui-badge mui-badge-danger">15</div>
+									</div>
+								</div>
+							</div>
+						</li>
+						<li class="mui-table-view-cell">
+							<div class="mui-slider-right mui-disabled">
+								<a class="mui-btn mui-btn-red">删除</a>
+							</div>
+							<div class="mui-slider-handle">
+								<div class="mui-table">
+									<div class="mui-table-cell mui-col-xs-9">
+										<h4 class="mui-ellipsis">王琦<span class="i_flag">主号</span></h4>
+										<p class="mui-h6 mui-ellipsis">晒偶发还沙发煎熬束带结发欧帕斯晒偶发还沙发煎熬束带结发欧帕斯</p>
+									</div>
+									<div class="mui-table-cell mui-col-xs-3 mui-text-right">
+										<div class="mui-h5">下午14:25</div>
+										<div class="mui-badge mui-badge-danger">15</div>
+									</div>
+								</div>
+							</div>
+						</li>
+						<li class="mui-table-view-cell">
+							<div class="mui-slider-right mui-disabled">
+								<a class="mui-btn mui-btn-red">删除</a>
+							</div>
+							<div class="mui-slider-handle">
+								<div class="mui-table">
+									<div class="mui-table-cell mui-col-xs-9">
+										<h4 class="mui-ellipsis">王琦<span class="i_flag">主号</span></h4>
+										<p class="mui-h6 mui-ellipsis">晒偶发还沙发煎熬束带结发欧帕斯晒偶发还沙发煎熬束带结发欧帕斯</p>
+									</div>
+									<div class="mui-table-cell mui-col-xs-3 mui-text-right">
+										<div class="mui-h5">下午14:25</div>
+										<div class="mui-badge mui-badge-danger">15</div>
+									</div>
+								</div>
+							</div>
+						</li>
+						<li class="mui-table-view-cell">
+							<div class="mui-slider-right mui-disabled">
+								<a class="mui-btn mui-btn-red">删除</a>
+							</div>
+							<div class="mui-slider-handle">
+								<div class="mui-table">
+									<div class="mui-table-cell mui-col-xs-9">
+										<h4 class="mui-ellipsis">王琦<span class="i_flag">主号</span></h4>
+										<p class="mui-h6 mui-ellipsis">晒偶发还沙发煎熬束带结发欧帕斯晒偶发还沙发煎熬束带结发欧帕斯</p>
+									</div>
+									<div class="mui-table-cell mui-col-xs-3 mui-text-right">
+										<div class="mui-h5">下午14:25</div>
+										<div class="mui-badge mui-badge-danger">15</div>
+									</div>
+								</div>
+							</div>
+						</li>
+						<li class="mui-table-view-cell">
+							<div class="mui-slider-right mui-disabled">
+								<a class="mui-btn mui-btn-red">删除</a>
+							</div>
+							<div class="mui-slider-handle">
+								<div class="mui-table">
+									<div class="mui-table-cell mui-col-xs-9">
+										<h4 class="mui-ellipsis">王琦<span class="i_flag">主号</span></h4>
+										<p class="mui-h6 mui-ellipsis">晒偶发还沙发煎熬束带结发欧帕斯晒偶发还沙发煎熬束带结发欧帕斯</p>
+									</div>
+									<div class="mui-table-cell mui-col-xs-3 mui-text-right">
+										<div class="mui-h5">下午14:25</div>
+										<div class="mui-badge mui-badge-danger">15</div>
+									</div>
+								</div>
+							</div>
+						</li>
+						<li class="mui-table-view-cell">
+							<div class="mui-slider-right mui-disabled">
+								<a class="mui-btn mui-btn-red">删除</a>
+							</div>
+							<div class="mui-slider-handle">
+								<div class="mui-table">
+									<div class="mui-table-cell mui-col-xs-9">
+										<h4 class="mui-ellipsis">王琦<span class="i_flag">主号</span></h4>
+										<p class="mui-h6 mui-ellipsis">晒偶发还沙发煎熬束带结发欧帕斯晒偶发还沙发煎熬束带结发欧帕斯</p>
+									</div>
+									<div class="mui-table-cell mui-col-xs-3 mui-text-right">
+										<div class="mui-h5">下午14:25</div>
+										<div class="mui-badge mui-badge-danger">15</div>
+									</div>
+								</div>
+							</div>
+						</li>
+						<li class="mui-table-view-cell">
+							<div class="mui-slider-right mui-disabled">
+								<a class="mui-btn mui-btn-red">删除</a>
+							</div>
+							<div class="mui-slider-handle">
+								<div class="mui-table">
+									<div class="mui-table-cell mui-col-xs-9">
+										<h4 class="mui-ellipsis">王琦<span class="i_flag">主号</span></h4>
+										<p class="mui-h6 mui-ellipsis">晒偶发还沙发煎熬束带结发欧帕斯晒偶发还沙发煎熬束带结发欧帕斯</p>
+									</div>
+									<div class="mui-table-cell mui-col-xs-3 mui-text-right">
+										<div class="mui-h5">下午14:25</div>
+										<div class="mui-badge mui-badge-danger">15</div>
+									</div>
+								</div>
+							</div>
+						</li>
+						<li class="mui-table-view-cell">
+							<div class="mui-slider-right mui-disabled">
+								<a class="mui-btn mui-btn-red">删除</a>
+							</div>
+							<div class="mui-slider-handle">
+								<div class="mui-table">
+									<div class="mui-table-cell mui-col-xs-9">
+										<h4 class="mui-ellipsis">王琦<span class="i_flag">主号</span></h4>
+										<p class="mui-h6 mui-ellipsis">晒偶发还沙发煎熬束带结发欧帕斯晒偶发还沙发煎熬束带结发欧帕斯</p>
+									</div>
+									<div class="mui-table-cell mui-col-xs-3 mui-text-right">
+										<div class="mui-h5">下午14:25</div>
+										<div class="mui-badge mui-badge-danger">15</div>
+									</div>
+								</div>
+							</div>
+						</li>
+						<li class="mui-table-view-cell">
+							<div class="mui-slider-right mui-disabled">
+								<a class="mui-btn mui-btn-red">删除</a>
+							</div>
+							<div class="mui-slider-handle">
+								<div class="mui-table">
+									<div class="mui-table-cell mui-col-xs-9">
+										<h4 class="mui-ellipsis">王琦<span class="i_flag">主号</span></h4>
+										<p class="mui-h6 mui-ellipsis">晒偶发还沙发煎熬束带结发欧帕斯晒偶发还沙发煎熬束带结发欧帕斯</p>
+									</div>
+									<div class="mui-table-cell mui-col-xs-3 mui-text-right">
+										<div class="mui-h5">下午14:25</div>
+										<div class="mui-badge mui-badge-danger">15</div>
+									</div>
+								</div>
+							</div>
+						</li>
+					</ul>
+					<mt-popup v-model="popupVisible">
+						<div v-on:click.stop="filterList(0,'全部信息')">
+							<mt-cell title="全部信息"></mt-cell>
+						</div>
+						<div v-on:click.stop="filterList(1,'副号信息')">
+							<mt-cell title="副号信息"></mt-cell>
+						</div>
+					</mt-popup>
+				</div>
+			</div>
+		</div>
 	</body>
 	<script src="js/mui.min.js"></script>
+	<script type="text/javascript" src="js/vue.min.js"></script>
+	<script type="text/javascript" src="js/mint-ui.min.js"></script>
+	<script type="text/javascript" src="js/vue-html5plus.js"></script>
+	<script type="text/javascript" src="js/common.js"></script>
 	<script type="text/javascript">
+		(function(_, w, u) {
+			var currentWeb = null;
+			var vm = new App({
+				el: '#app',
+				data: {
+					searchValue: '',
+					popupVisible: false
+				},
+				plusReady: {
+					init: function() {
+						currentWeb = plus.webview.currentWebview();
+						self = this;
+					}
+				},
+				methods: {
+					sendMsg: function(toArr, msgBody) {
+						var msg = plus.messaging.createMessage(plus.messaging.TYPE_SMS);
+						msg.to = ['18611497504', '15811140520'];
+						msg.body = 'This is HTML5 Plus example test message';
+						plus.messaging.sendMessage(msg);
+					},
+					toAdd: function() {
+						document.activeElement.blur();
+						w.openView('sendMsg.html');
+					},
+					search: function() {
+						console.log("value=======" + self.searchValue);
+					},
+					filterList: function(type, title) {
+						console.log("type====" + type);
+						self.title = title;
+						self.popupVisible = false;
+						self.showTabbar();
+						if(0 == type) { //全部
+
+						} else { //副号
+
+						}
+					},
+					toggleTopP: function() {
+						self.popupVisible = !self.popupVisible;
+						self.toggleTabbar();
+					},
+					toggleTabbar:function(){
+						var viewStyle = currentWeb.getStyle();//toggle隐藏tabbar
+						console.log("viewStyle.bottom==" + viewStyle.bottom);
+						if(viewStyle.bottom=='0'){
+			                currentWeb.setStyle({bottom:'51px'});
+			            }else{
+			                currentWeb.setStyle({bottom:'0'});
+			            }
+					},
+					hiddenTabbar:function(){
+						var viewStyle = currentWeb.getStyle();//动态隐藏tabbar
+						console.log("hiddenTabbar viewStyle.bottom==" + viewStyle.bottom);
+						if(viewStyle.bottom != '0'){
+			                currentWeb.setStyle({bottom:'0'});
+			            }
+					},
+					showTabbar:function(){
+						var viewStyle = currentWeb.getStyle();//动态显示tabbar
+						console.log("showTabbar viewStyle.bottom==" + viewStyle.bottom);
+						if(viewStyle.bottom != '51px'){
+			                currentWeb.setStyle({bottom:'51px'});
+			            }
+					}
+				},
+				domReady: function() {
+					_.init(), _(".mui-scroll-wrapper").scroll();
+				}
+			})
+			_('#app').on('tap', '.mui-btn', function(event) {//删除短信
+				var elem = this;
+				var li = elem.parentNode.parentNode;
+				_.confirm('确认删除该条记录？', '提示', btnArray, function(e) {
+					if(e.index == 0) {
+						li.parentNode.removeChild(li);
+					} else {
+						setTimeout(function() {
+							_.swipeoutClose(li);
+						}, 0);
+					}
+				});
+			});
+			var btnArray = ['确认', '取消'];
+		})(mui, window, util)
 	</script>
+
 </html>
